Added Event Tags
Add remove tags, new schema, tests/factories, swagger
